tests/paczka1/fuzzy1/83922844.err
Error in line 7: wK0CXsP A893 39,4
Error in line 12: QqeT8 S978 66,1
Error in line 19: QqeT8 A893 95,5
Error in line 18: hK6ObYabN S345 3,4
Error in line 26: hK6ObYabN S978 62,9
Error in line 28: hK6ObYabN A893 77,4
